--- a/styles.css
+++ b/styles.css
@@ -119,19 +119,34 @@ h3 {
     display: inline-block;
 } */
 
-body,
+* {
+  box-sizing: border-box;
+}
+
 html {
+  background: black;
+  height: 100%;
+  margin: 0;
+}
+
+body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     color: white;
+    background-color: #2B2733;
+    height: 100%;
 }
 
 header {
     background-color: #46424D;
     color: white;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     text-transform: uppercase;
+}
+
+.title {
+  margin: 0;
 }
 
 .site-left-main {
@@ -139,12 +154,6 @@ header {
     border-right: 1px solid grey;
     color: white;
     width: 70%;
-    display: inline-block;
-    height: auto;
-}
-
-.left-background {
-    height: 30vh;
 }
 
 .new-activity {
@@ -152,7 +161,6 @@ header {
 }
 
 .site-left-box {
-    height: 100%;
     background-color: #46424D;
     margin: 20px;
     padding: 70px;
@@ -231,7 +239,7 @@ header {
 
 .question {
     display: block;
-    background-color: #46424D;
+    /* background-color: #46424D; */
     border: none;
     border-bottom: 1px solid white;
     width: 100%;
@@ -244,13 +252,9 @@ header {
     justify-content: space-between;
 }
 
-.minutes-column {
-    display: inline-block;
-}
-
 .minute {
     display: block;
-    background-color: #46424D;
+    /* background-color: #46424D; */
     border: none;
     border-bottom: 1px solid white;
     margin-bottom: 0.5em;
@@ -258,13 +262,9 @@ header {
     width: 60%;
 }
 
-.seconds-column {
-    display: inline-block;
-}
-
 .seconds {
     display: block;
-    background-color: #46424D;
+    /* background-color: #46424D; */
     border: none;
     border-bottom: 1px solid white;
     margin-bottom: 0.5em;
@@ -279,15 +279,12 @@ header {
     padding: 8px 30px;
     border-radius: 5px;
     text-transform: uppercase;
-    display: flex;
     float: right;
 }
 
 .site-right-main {
     background-color: #2B2733;
-    float: right;
     width: 29.9%;
-    height: 105.4vh;
 }
 
 .past-activities {
@@ -335,4 +332,10 @@ header {
 
 input[type="button"]:hover {
     cursor: pointer;
+}
+
+.main-content {
+  display: flex;
+  background-color: #2B2733;
+  height: calc(100% - 59px);
 }
