--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
+html,
+body {
+    height: 100%;
+    margin: 0;
 }
 
 body {
@@ -22,7 +23,7 @@ header {
 }
 
 .title {
-  margin: 0;
+    margin: 0;
 }
 
 .site-left-main {
@@ -34,6 +35,7 @@ header {
 
 .new-activity {
     margin-left: 20px;
+    font-weight: 300;
 }
 
 .site-left-box {
@@ -202,7 +204,37 @@ input[type="button"]:hover {
 }
 
 .main-content {
-  display: flex;
-  background-color: #2B2733;
-  height: calc(100% - 59px);
+    display: flex;
+    background-color: #2B2733;
+    height: calc(100% - 59px);
+}
+
+.start-timer-section {
+    display: flex;
+}
+
+.start-timer-button {
+    background-color: #46424D;
+    border: 2px solid;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    color: #FFFFFF;
+    font-size: 1.5em;
+    font-weight: 300;
+    margin: auto;
+}
+
+.start-timer-goal {
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0;
+}
+
+.start-timer-counter {
+    text-align: center;
+    font-size: 4em;
+    font-weight: 700;
+    margin: 0;
+    padding-bottom: 40px;
 }
