--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,14 @@ header {
     text-transform: uppercase;
 }
 
-.title {
+.header-title {
     margin: 0;
+}
+
+.full-content {
+    display: flex;
+    background-color: #2B2733;
+    /* height: calc(100% - 59px); */
 }
 
 .site-left-main {
@@ -116,9 +122,9 @@ header {
     justify-content: space-between;
 }
 
-.question,
-.minutes,
-.seconds {
+.activity-input,
+.minutes-input,
+.seconds-input {
     display: block;
     background-color: #46424D;
     border: none;
@@ -158,7 +164,7 @@ header {
   margin-left: 10em;
 }
 
-.start-button {
+.start-activity-button {
     background-color: #EEEEEE;
     color: #46424D;
     font-size: 1em;
@@ -181,7 +187,7 @@ header {
     margin: 10px;
 }
 
-.activity-box {
+.past-activity-box {
     background-color: #46424D;
     border-radius: 5px;
     margin: 10px;
@@ -194,16 +200,16 @@ header {
     justify-content: space-between;
 }
 
-.activity-name {
+.past-activity-name {
     font-weight: 700;
 }
 
-.activity-time {
+.past-activity-time {
     text-transform: uppercase;
     font-weight: 400;
 }
 
-.activity-description {
+.past-activity-description {
     font-weight: 300;
 }
 
@@ -219,11 +225,7 @@ input[type="button"]:hover {
     cursor: pointer;
 }
 
-.main-content {
-    display: flex;
-    background-color: #2B2733;
-    height: calc(100% - 59px);
-}
+
 
 .start-timer-section {
     display: flex;
