--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,8 @@ header {
 }
 
 .category-error {
-  padding-bottom: 3em;
-  text-align: center;
+    padding-bottom: 3em;
+    text-align: center;
 }
 
 .minutes-seconds-row {
@@ -135,7 +135,6 @@ header {
     color: white;
     padding-left: 5px;
     padding-top: 5px;
-
 }
 
 .question-error-active {
@@ -146,22 +145,34 @@ header {
 .description-error,
 .minutes-error,
 .seconds-error {
-  margin-bottom: 2em;
-  color: #EFB7EC;
-  /* visibility: hidden; */
+    margin-bottom: 2em;
+    color: #EFB7EC;
+    visibility: hidden;
 }
 
 .description-error-active {
-  visibility: visible;
+    visibility: visible;
+}
+
+.category-error-active {
+    visibility: visible;
+}
+
+.minutes-error-active {
+    visibility: visible;
+}
+
+.seconds-error-active {
+    visibility: visible;
 }
 
 .error-image {
-  height: 15px;
-  width: 15px;
+    height: 15px;
+    width: 15px;
 }
 
 .seconds-column {
-  margin-left: 10em;
+    margin-left: 10em;
 }
 
 .start-activity-button {
@@ -224,8 +235,6 @@ header {
 input[type="button"]:hover {
     cursor: pointer;
 }
-
-
 
 .start-timer-section {
     display: flex;
