--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header {
 .full-content {
     display: flex;
     background-color: #2B2733;
-    /* height: calc(100% - 59px); */
+    height: calc(100% - 59px);
 }
 
 .site-left-main {
