--- a/styles.css
+++ b/styles.css
@@ -253,15 +253,15 @@ input[type="button"]:hover {
 }
 
 .study-timer-button {
-    background-color: #46424D;
     border: 2px solid #B3FD78;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    color: #FFFFFF;
-    font-size: 1.5em;
-    font-weight: 300;
-    margin: auto;
+}
+
+.exercise-timer-button {
+    border: 2px solid #FD8087;
+}
+
+.meditate-timer-button {
+    border: 2px solid #C278FD;
 }
 
 .start-timer-goal {
