--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,11 @@ header {
     float: right;
 }
 
+.activity-complete-section {
+    display: flex;
+    flex-direction: column;
+}
+
 .log-activity-button {
     background-color: #EEEEEE;
     color: #46424D;
@@ -193,6 +198,8 @@ header {
     border-radius: 5px;
     text-transform: uppercase;
     display: block;
+    width: 50%;
+    margin: 3em auto;
 }
 
 .site-right-main {
@@ -242,17 +249,36 @@ header {
     border-radius: 10px;
 }
 
+.color-tab-meditate {
+    height: 2em;
+    width: 2%;
+    border-radius: 10px;
+    background: #C278FD;
+    color: #C278FD;
+}
+
+.color-tab-study {
+    height: 2em;
+    width: 2%;
+    border-radius: 10px;
+    background: #B3FD78;
+    color: #B3FD78;
+}
+
+.color-tab-exercise {
+    height: 2em;
+    width: 2%;
+    border-radius: 10px;
+    background: #FD8087;
+    color: #FD8087;
+}
+
 input[type="button"]:hover {
     cursor: pointer;
 }
 
 .start-timer-section {
     display: flex;
-}
-
-.activity-complete-section {
-    display: flex;
-    flex-direction: column;
 }
 
 .start-timer-button {
