Removed placeholder card

--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,14 @@ header {
 }
 
 .past-activities {
-  margin: 10px;
+  margin: 20px;
   font-weight: normal;
 }
 
 .site-right-activities {
   margin: 10px;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .past-activity-box {
